# spam-email-detector

./: .gitignore  .pre-commit-config.yaml  README.md  init_template.py  pyproject.toml
src/spam_email_detector/: model.py
tests/: test_model.py  test_sample.py
